--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,9 @@
             <h1>
                 <a href="/">Tech Blog Forum</a>
             </h1>
+            <nav>
+                <a href="/login">Login!</a>
+            </nav>
         </header>
         <main>
             {{{ body }}}
