--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
                 <a href="/">Tech Blog Forum</a>
             </h1>
             <nav>
+                <button id="logout" class="btn-no-style">Logout!</button>
                 <a href="/login">Login!</a>
             </nav>
         </header>
@@ -25,6 +26,7 @@
             Made with pride by Mathew!
         </footer>
     </div>
+    <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
