--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,11 @@
   <li>
     <article class="post">
       <div class="title">
-        <a href="{{post.content}}" target="_blank">{{post.title}}</a>
+        <a href="/post/{{post.id}}">{{post.title}}</a>
         <span>({{post.content}})</span>
       </div>
       <div class="meta">
-        by {{post.user.username}} on
+        Created by {{post.user.username}} on
         {{post.created_at}}
         |
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
