--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,11 @@
                 <a href="/">Tech Blog Forum</a>
             </h1>
             <nav>
+                {{#if loggedIn}}
                 <button id="logout" class="btn-no-style">Logout!</button>
+                {{else}}
                 <a href="/login">Login!</a>
+                {{{/if}}}
             </nav>
         </header>
         <main>
@@ -26,7 +29,9 @@
             Made with pride by Mathew!
         </footer>
     </div>
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
