--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,17 +11,19 @@
 <body>
     <div>
         <header>
-            <h1>
-                <a href="/">Tech Blog Forum</a>
-            </h1>
+
             <nav>
+                <a href="/">Home</a>
                 {{#if loggedIn}}
                 <a href="/dashboard">Dashboard</a>
-                <button id="logout" class="btn-no-style">Logout!</button>
+                <button id="logout" class="btn-no-style">Logout</button>
                 {{else}}
-                <a href="/login">Login!</a>
+                <a href="/login">Login</a>
                 {{/if}}
             </nav>
+            <h1>
+                <a>Tech Blog Forum</a>
+            </h1>
         </header>
         <main>
             {{{ body }}}
