--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,18 +1,3 @@
-<section>
-  <h2>Create New Post</h2>
-
-  <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
-    </div>
-    <div>
-      <label for="post-content">Content</label>
-      <input id="post-content" name="post-content" />
-    </div>
-    <button type="submit" class="btn">Submit</button>
-  </form>
-</section>
 
 {{#if posts.length}}
 <section>
@@ -28,4 +13,4 @@
 </section>
 {{/if}}
 
-<script src="/javascript/add-post.js"></script>
+<button type="submit" class="btn"><a class="link" href="/dashboard/new">New Post</a></button>
