--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,5 @@
+<h2>Login</h2>
+
 <form class="login-form">
   <div>
     <label for="username-login">username:</label>
@@ -11,7 +13,7 @@
     <button type="submit">login</button>
   </div>
 </form>
-
+<br>
 <a href="/signup">Signup Instead</a>
 
 <script src="/javascript/login.js"></script>
