not perfect, but css is getting somewhere

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,19 +10,19 @@
     color: rgb(0, 0, 0);
   }
   
-  /* a {
+  a {
     text-decoration: none;
-    color: #225ca3;
+    color: purple;
     font-weight: bold;
     transition: color .1s;
   }
   
   a:hover {
-    color: #3486eb;
+    color: plum;
   }
   
-  button {
-    background-color: #225ca3;
+  button, .new-post-button {
+    background-color: purple;
     border: 0;
     padding: 1%;
     color: white;
@@ -33,7 +33,7 @@
   }
   
   button:hover {
-    background-color: #3486eb;
+    background-color: plum;
   }
   
   .post-list {
@@ -45,11 +45,12 @@
     padding: .5%;
     border-radius: 5px;
     border: 1px solid #ccc;
+    width: 300px;
   }
   
   textarea:focus, input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 1px solid plum;
   }
   
   textarea {
@@ -75,20 +76,22 @@
   }
   
   header {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid darkgray;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0 1%;
+    padding: 1% 2% 1% 2%;
+    font-size: 1em;
   }
   
-  header h1 {
-    font-size: 1em;
+h1 {
+    display: flex;
+    align-items: center;
+    padding: 0 1% 0 1%;
   }
   
   main {
     flex: 1;
-    padding: 2% 4%;
+    padding: 1% 4%;
   }
   
   .btn-no-style {
@@ -97,7 +100,7 @@
     padding: 0;
     cursor: pointer;
     text-decoration: none;
-    color: #225ca3;
+    color: purple;
     font-size: 100%;
     font-weight: bold;
     transition: color .1s;
@@ -106,15 +109,15 @@
   
   .btn-no-style:hover {
     background: none;
-    color: #3486eb;
+    color: plum;
   }
   
   .delete-post-btn {
-    background-color: #d41414;
+    background-color: red;
   }
   
   .delete-post-btn:hover {
-    background-color: #ff643d;
+    background-color: purple;
   }
   
   .post {
@@ -123,9 +126,8 @@
   }
   
   .post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: #7d7d7d;
+    font-size: 100%;
+    color: gray;
   }
   
   .edit-link {
@@ -143,7 +145,7 @@
   }
   
   .comment:nth-child(odd) {
-    background-color: #fff5eb;
+    background-color: plum;
   }
   
   .comment .meta {
@@ -153,7 +155,7 @@
   }
   
   .new-post-form input {
-    width: 300px;
+    width: 500px;
   }
   
   .edit-post-form {
@@ -161,9 +163,10 @@
   }
   
   footer {
-    border-top: 1px solid #ccc;
+    border-top: 2px solid darkgray;
     display: flex;
     justify-content: center;
     padding: 1%;
-    font-size: 110%;
-  } */
+    font-size: 90%;
+    color: plum;
+  }
