--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -4,6 +4,6 @@
     <span>Created by {{user.username}} on {{created_at}}</span>
   </div>
   <div class="meta">
-      ({{content}})
+      {{content}}
   </div>
 </article>
