--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -2,12 +2,13 @@
 
 {{#if loggedIn}}
 <form class="comment-form">
+      <a>Comment: </a>
   <div>
     <textarea name="comment-body"></textarea>
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit">Submit</button>
   </div>
 </form>
 {{/if}}
