--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,14 +2,14 @@
 {{#if posts.length}}
 <section>
   <h2>Your Dashboard</h2>
-  <ol>
+  <ul>
     {{#each posts as |post|}}
     <li>
       {{> post-title post}}
     </li>
     {{/each}}
-  </ol>
+  </ul>
 </section>
 {{/if}}
 
-<button type="submit" class="btn"><a class="link" href="/dashboard/new">New Post</a></button>
+<a class="new-post-button" href="/dashboard/new">New Post</a>
